web/sass/base.scss
/* ... */
footer {
    position: sticky;
    bottom: 0;
    left: 0;
    width: 100%;
    z-index: 101;
    box-sizing: border-box;
    display: flex;
    justify-content: space-between;
    padding: 12px 16px;
    background-color: #030303c0;
    color: var(--color-button-text);

    > div {
        width: 50%;
        display: flex;
        gap: 24px;
        align-items: center;
    }

    .with-tooltip > span {
        right: -8px;
    }
} 

.space-between {
    display: flex;
    justify-content: space-between !important;
}

.tooltip {
    transition-duration: 0.1s;
    position: absolute;
    bottom: 100%;
    background-color: var(--color-background);
    border-radius: $radius;
    padding: 6px 8px;
    pointer-events: none;
    opacity: 0;
    max-width: 180px;
    width: max-content;
    z-index: 2;
    font-family: var(--font-paragraph);
    font-size: 16px;
    font-weight: normal;
}

%with-tooltip {
    position: relative;
    display: flex;
    justify-content: center;

    > span {
        @extend .tooltip;
    }

    @include mixins.on-desktop {
        &:hover, &.hovered {
            > span {
                opacity: 1;
            }
        }
    }
}

.with-tooltip {
    @extend %with-tooltip;
}

.toolbox {
    display: grid;
    background-color: #aaa;
    border: 1px solid #ddd;
    gap: 1px;

    > i {
        @extend %toolbox-item;
    }
}

%toolbox-item {
    @extend %with-tooltip;
    background-color: var(--color-background);
    width: 36px;
    height: 36px;
    font-size: 20px;
    align-items: center;

    &:hover {
        background-color: var(--color-button-hover);
    }
    &.active {
        background-color: var(--color-button-active);
        color: var(--color-primary);
    }

    > span {
        bottom: calc(100% + 4px);
    }
}

button.floating-action {
    background-color: var(--color-button-hover);
    right: 16px;
    bottom: 20px;
    width: 56px;
    height: 56px;
    border-radius: 50%;
    box-shadow: 0 2px 12px 2px #0007;
    font-size: 20px;

    &.hovered {
        background-color: var(--color-button-active);
    }
}

